# Credit-Card-Fraud-Detection-Using-DNN

./: Dockerfile  README.md  app.py  docker-compose.yml  main.py  notebook.html  notebook.ipynb  pyproject.toml  requirements.txt
api/: main.py
model/: credit_card_detection.h5  credit_card_detection.keras
